		now also updated.
		Added setup item for menus 317 and 318.
		Changed the order of menu 1, global settings. The screens are
		now in a more logical order for a first system setup.
		Most datafiles are now saved mode 0640 exept the files that
		need to be rewritten by users, they have mode 0660.
		In the file database editor the default choice was 0 in stead
		of -.

	mbsebbs:
		Added menu 317, change FS editor shortcut keys to (Emacs/
		Wordstar) style.
		Added menu 318, change users address.
		Added control-U 4, ON/OFF for FS edit Emacs shortcut keys.
		Now updates the lastcaller information when a call is finished
		and now also sets all the action bits what the user has been
		doing. Also time online is correct now.
		Added control-U 5, 6, 7, display users address lines 1, 2
		and 3.
		If a user doesn't have a .signature file in his homedir, a
		simple one will be created.
		If a user saves a new message at the bbs, the message will be
		signed using the .signature file.
		Patches from Bobby Cabral:
		- Fixed display file with more that stopped after every line.
		- Added display file "mainlogo" before the "welcome" file.
		- Added display files "welcome2..9" after "welcome1" file.
		Posting message with users alias is now possible.
		If in menu entries "Display prompt" the fore and background
		colors are set, the prompt is displayed with these colors.
		If not, the prompt defaults to white on black. 
		Does now run as the users uid, not suid anymore. You are not
		able to login with Fidonet style name anymore, only using
		login. Removed IEMSI support, this has no use anymore. New
		users need to register with the mbnewuser program, mbsebbs is
		only for registered users. This should fix all kinds of setuid
		and security problems with previous versions.
		QuickScan messages in netmail areas now only shows personal
		messages.
		The whoson list now uses mbtask to get the information.
		The users exitinfo file is now stored in his homedirectory